--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
+<!--
+SPDX-FileCopyrightText: (c) 2009 Contributors to the ProjectX
+SPDX-License-Identifier: CC-BY-4.0
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
